--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -71,7 +71,7 @@
     background: rgb(255, 255, 255);
     border: 5px solid #98b5f5;
     border-radius: 5px;
-    height: 600px;
+    height: 850px;
     overflow: auto;
 }
 
@@ -100,6 +100,53 @@
     background-color: #98b5f5; /* Màu nền của phần tiêu đề */
 }
 
+td {
+    text-align: left;
+    font-size: smaller;
+}
+
+.custom-button {
+    background-color: #4CAF50; /* Màu xanh */
+    border: none;
+    color: white;
+    /*padding: 10px 20px;*/
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: small;
+    cursor: pointer;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+}
+
+.custom-button:hover {
+    background-color: #45a049; /* Màu xanh nhạt khi hover */
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+
+    text-align: center;
+}
+
+th {
+    position: relative;
+}
+
+.dragHandle {
+    background-color: #ffffff;
+    cursor: col-resize;
+    height: 100%;
+    position: absolute;
+    width: 3px; /* Kích thước của handle */
+    top: 0;
+    right: -2px;
+    z-index: 999;
+}
 /* Sell product CSS */
 /* ---------------- */
 .sell-wrap {
@@ -124,5 +171,26 @@
     padding-right: 20px;
     text-align: end;
 }
+
+/* Detail CSS */
+/* ----------- */
+
+.detail-market-wrap {
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 10px 100px -15px;
+    background: rgb(255, 255, 255);
+    border: 6px solid #98b5f5;
+    border-radius: 5px;
+    height: 955px;
+    overflow: auto;
+}
+
+.detail-post-wrap {
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 10px 30px -15px;
+    background: rgb(255, 255, 255);
+    border-radius: 18px;
+}
+
 
 
