--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -181,7 +181,7 @@ th {
     background: rgb(255, 255, 255);
     border: 6px solid #98b5f5;
     border-radius: 5px;
-    height: 955px;
+    height: 730px;
     overflow: auto;
 }
 
@@ -190,6 +190,25 @@ th {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 10px 30px -15px;
     background: rgb(255, 255, 255);
     border-radius: 18px;
+}
+
+/* Detail Selling CSS */
+/* ----------- */
+
+.detail-selling-market-wrap {
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 10px 100px -15px;
+    background: rgb(255, 255, 255);
+    border: 6px solid #98b5f5;
+    border-radius: 5px;
+    height: 600px;
+    overflow: auto;
+}
+
+.sticky-table {
+    position: sticky; /* Hiển thị phần tiêu đề bảng cố định */
+    top: 130px; /* Đặt vị trí cố định ở đầu trang */
+    z-index: 1; /* Đặt chỉ số z cao hơn để hiển thị phần tiêu đề trên cùng */
 }
 
 
