--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -211,5 +211,44 @@ th {
     z-index: 1; /* Đặt chỉ số z cao hơn để hiển thị phần tiêu đề trên cùng */
 }
 
+/* Pop-up confirm CSS */
+/* ------------------- */
 
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9998;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    text-align: center;
+    z-index: 9999;
+}
+
+.popup-content {
+    color: black;
+}
+
+.popup button {
+    margin: 5px 25px;
+    padding: 10px 20px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    border-radius: 7px;
+}
 
